Faction List Creator and Random Faction Generator
Created functions to let the user choose
sets to generate a list of factions and
pick two random factions

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -6,10 +6,92 @@
     <title>Document</title>
 </head>
 <body>
-
     
-    <script src="sets.js"></script>
+    <form>
+        <fieldset>
+            <input type="checkbox" name="chk-base" id="chkbase">
+            <label for="chkbase">Base Set</label>
+            <br>
+            <input type="checkbox" name="chk-al9000" id="chkal9000">
+            <label for="chkal9000">Awesome Level 9000</label>
+            <br>
+            <input type="checkbox" name="chk-cthulhu" id="chkcthulhu">
+            <label for="chkcthulhu">Obligatory Cthulhu Set
+            </label>
+            <br>
+            <input type="checkbox" name="chk-scifidbl" id="chkscifidbl">
+            <label for="chkscifidbl">Science Fiction Double Feature</label>
+            <br>
+            <input type="checkbox" name="chk-monster" id="chkmonster">
+            <label for="chkmonster">Monster Smash</label>
+            <br>
+            <input type="checkbox" name="chk-pretty" id="chkpretty">
+            <label for="chkpretty">Pretty Pretty</label>
+            <br>
+            <input type="checkbox" name="chk-urfault" id="chkurfault">
+            <label for="chkurfault">It's Your Fault!</label>
+            <br>
+            <input type="checkbox" name="chk-cease" id="chkcease">
+            <label for="chkcease">Cease and Desist</label>
+            <br>
+            <input type="checkbox" name="chk-thinking" id="chkthinking">
+            <label for="chkthinking">What Were We Thinking?</label>
+            <br>
+            <input type="checkbox" name="chk-japan" id="chkjapan">
+            <label for="chkjapan">Big in Japan</label>
+            <br>
+            <input type="checkbox" name="chk-seventies" id="chkseventies">
+            <label for="chkseventies">That 70's Expansion</label>
+            <br>
+            <input type="checkbox" name="chk-oops" id="chkoops">
+            <label for="chkoops">Oops! You Did It Again!</label>
+            <br>
+            <input type="checkbox" name="chk-wtint" id="chkwtint">
+            <label for="chkwtint">World Tour: International Incident</label>
+            <br>
+            <input type="checkbox" name="chk-wtshock" id="chkwtshock">
+            <label for="chkwtshock">World Tour: Culture Shock</label>
+            <br>
+            <input type="checkbox" name="chk-geeks" id="chkgeeks">
+            <label for="chkgeeks">Geeks</label>
+            <br>
+            <input type="checkbox" name="chk-allstars" id="chkallstars">
+            <label for="chkallstars">All-Stars</label>
+            <br>
+            <input type="checkbox" name="chk-sheep" id="chksheep">
+            <label for="chksheep">Sheep</label>
+            <br>
+            <input type="checkbox" name="chk-penguins" id="chkpenguins">
+            <label for="chkpenguins">Penguins</label>
+            <br>
+            <input type="checkbox" name="chk-goblins" id="chkgoblins">
+            <label for="chkgoblins">Goblins</label>
+            <br>
+            <input type="checkbox" name="chk-knights" id="chkknights">
+            <label for="chkknights">Knights of the Round Table</label>
+            <br>
+            <input type="checkbox" name="chk-munch" id="chkmunch">
+            <label for="chkmunch">Munchkin</label>
+            <br>
+            <input type="checkbox" name="chk-marvel" id="chkmarvel">
+            <label for="chkmarvel">Marvel</label>
+            <br>
+            <input type="checkbox" name="chk-dis" id="chkdis">
+            <label for="chkdis">Disney</label>
+            <br>
+            <input type="checkbox" name="chk" id="chk-">
+            <label for="chk"></label>
+            <br>
+            <button class="create-list" id="createfactionlist">Create Faction List</button>
+        </fieldset>
+    </form>
+    <div>
+        <button id="random">Random</button>
+    </div>
+
     <script src="test.js"></script>
+    <script src="sets.js"></script>
+
 
     
 </body>
