Number of Player Buttons and Draft
Added buttons to choose number of players in page and
added functions to run a draft for each number of players

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -91,16 +91,13 @@
             <button class="create-list" id="createfactionlist">Create Faction List</button>
         </fieldset>
     </form>
-    <div>
-        <div>Random Draft <br>
-            <label for="numberofplayers">Number of Players</label>
-
-            <form action="">
-                <input type="number" placeholder="enter number of players">
-            </form>
-        </div>
-        <button id="random">Random</button>
+    <div>Click on number of players to run draft
+        <button id="2players">2</button>
+        <button id="3players">3</button>
+        <button id="4players">4</button>
     </div>
+
+
 
     <script src="test.js"></script>
     <script src="sets.js"></script>
