--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <img src="SU-Logo.png" alt="">
     </p>
     
+    <div id="results">
+        <ul id="p1">Player 1</ul>
+        <ul id="p2">Player 2</ul>
+        <ul id="p3">Player 3</ul>
+        <ul id="p4">Player 4</ul>
+    </div>
+
     <ul id="factionlist">
         <button type="submit" onClick="refreshPage()">Create New List</button>
     </ul>
@@ -91,7 +98,7 @@
             <button class="create-list" id="createfactionlist">Create Faction List</button>
         </fieldset>
     </form>
-    <div>Click on number of players to run draft
+    <div id="draft">Click on number of players to run draft
         <button id="2players">2</button>
         <button id="3players">3</button>
         <button id="4players">4</button>
