--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smash Up Deck Builder</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,10 +12,26 @@
     </p>
     
     <div id="results">
-        <ul id="p1">Player 1</ul>
-        <ul id="p2">Player 2</ul>
-        <ul id="p3">Player 3</ul>
-        <ul id="p4">Player 4</ul>
+        <ul id="p1">
+            <p1 class="playerhead">Player 1</p1>
+            <li id="p1f1">fill</li>
+            <li id="p1f2">fill</li>
+            </ul>
+        <ul id="p2">
+            <p1 class="playerhead">Player 2</p1>
+            <li id="p2f1">fill</li>
+            <li id="p2f2">fill</li>
+            </ul>
+        <ul id="p3">
+            <p1 class="playerhead">Player 3</p1>
+            <li id="p3f1">fill</li>
+            <li id="p3f2">fill</li>
+            </ul>
+        <ul id="p4">
+            <p1 class="playerhead">Player 4</p1>
+            <li id="p4f1">fill</li>
+            <li id="p4f2">fill</li>
+            </ul>
     </div>
 
     <ul id="factionlist">
