Draft for X Amount of Players
Based on the amount of max players, the display for
any extra players in the run draft phase will be set
to none.

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <div id="draft">Click on number of players to run draft
         <br>
-        <button id="2players">2</button>
-        <button id="3players">3</button>
-        <button id="4players">4</button>
+        <button id="twoplayers">2</button>
+        <button id="threeplayers">3</button>
+        <button id="fourplayers">4</button>
         <button type="submit" onClick="refreshPage()">Create New List</button>
     </div>
         
